# nebulous-fleet-generator

./: Cargo.toml  README.md  parameters.toml
nebulous-data/: Cargo.toml  seeker_ranking.md  seeker_stats.md
nebulous-data/examples/: parse_fleet.rs  parse_local_files.rs  seeker_ranking.rs  seeker_stats.rs
nebulous-data/src/: components.rs  data.rs  format.rs  hulls.rs  lib.rs  loadout.rs  missiles.rs  munitions.rs  utils.rs
nebulous-data/src/data/: components.rs  hulls.rs  missiles.rs  munitions.rs
nebulous-data/src/data/hulls/: bulk_freighter.rs  config.rs  container_liner.rs
nebulous-data/src/data/hulls/config/: bulk_freighter.rs  container_liner.rs
nebulous-data/src/data/missiles/: bodies.rs  engines.rs  seekers.rs
nebulous-data/src/format/: key.rs
nebulous-fleet-duplicator/: Cargo.toml
nebulous-fleet-duplicator/src/: main.rs
nebulous-fleet-generator/: Cargo.toml
nebulous-fleet-generator/src/: generator.rs  main.rs  model.rs  parameters.rs  state.rs  utils.rs
nebulous-fleet-generator/src/model/: predicate.rs
nebulous-xml/: Cargo.toml
nebulous-xml/src/: lib.rs
xml/: Cargo.toml
xml/src/: lib.rs
