[package]
name = "nebulous-data"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.3", features = ["derive", "min_const_generics"] }
float-ord = { version = "0.3.2" }
indexmap = { version = "2.5.0" }
itertools = { version = "0.12.1" }
nebulous-xml = { path = "../nebulous-xml", features = ["uuid"] }
rand = { version = "0.8.5", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = { version = "1.0" }
uuid = { version = "1.7.0" }

[dev-dependencies]
base64 = { version = "0.22.1" }
steamlocate = { version = "1.2.1" }
walkdir = { version = "2.5.0" }

[features]
rand = ["dep:rand"]
serde = ["dep:serde", "uuid/serde", "indexmap/serde"]
