[package]
name = "nebulous-fleet-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = { version = "0.9.3" }
nebulous-data = { path = "../nebulous-data", features = ["rand", "serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
