[package]
name = "nebulous-fleet-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = { version = "0.9.3" }
nebulous-data = { path = "../nebulous-data", features = ["rand", "serde"] }
rand = { version = "0.8.5", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }

[dependencies.singlefile]
git = "https://github.com/ScottyThePilot/singlefile"
rev = "f4f5a60a18fe20a3369ce204c9dff535bdf051c7"

[dependencies.singlefile-formats]
git = "https://github.com/ScottyThePilot/singlefile"
rev = "f4f5a60a18fe20a3369ce204c9dff535bdf051c7"
features = ["json-serde", "cbor-serde", "base64"]
